<resources>


    <string name="app_name">ChaniaCityWalk</string>
    <string name="title_activity_maps">Map</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Button Bar Labels  -->
    <string name="ar_view">camera</string>
    <string name="profile">profile</string>
    <string name="edit_profile">edit profile</string>
    <string name="save_changes">SAVE</string>
    <string name="cancel_changes">Cancel</string>
    <string name="pending">pending</string>
    <string name="global_settings">settings</string>
    <string name="collection">collection</string>

    <string name="action_settings">Settings</string>
    <string name="title_scene_list">SceneCollection</string>
    <string name="title_scene_detail">Scene Detail</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_collection_siblings">CollectionSiblings</string>
    <string name="section_format">Hello World from section: %1$s</string>
    <string name="compass_accuracy_low">Please re-calibrate compass by waving your device in a figure 8 motion.</string>

    <!-- WIKITUDE -->
    <string name="location_fetching">Trying to find out where you are &#8530;</string>

    <!-- LOGIN -->
    <string name="remember_me">Remember me </string>
    <string name="prompt_email_username">Email or username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_old_password">Password</string>
    <string name="prompt_new_password">New Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_successful">Sign in Successful Welcome</string>
    <string name="action_register_successful">Successfully registered new Account Welcome</string>
    <string name="action_sign_in_wrong">Something went wrong check the form above</string>
    <string name="action_register_email_exists">Email is already registered, try logging in or check the form</string>
    <string name="action_login_screen">Log In / Register</string>
    <string name="action_login_screen_description">Thank you for Downloading.\n
        You can continue by creating a new account or logging in to an existing one. By Choosing the Guest option you will only have access to the 3D reconstructions</string>
    <string name="action_or">or</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_guest">Continue as Guest</string>
    <string name="action_sign_in_server_error">Something went wrong on our side :(</string>
    <string name="error_invalid_password">Password is too short</string>
    <string name="error_incorrect_password">The password you entered is incorrect</string>
    <string name="error_password_match">The passwords do not match</string>
    <string name="error_field_required">This Field is required</string>
    <string name="error_invalid_email">The email address is invalid</string>
    <string name="error_incorrect_email">The email address is not recognised</string>
    <string name="error_invalid_username">The username field is not valid</string>

    <string name="text_login">Don\'t have an account?</string>
    <string name="text_register">Already have an account?</string>

    <!-- PROFILE VIEW -->
    <string name="overall_title">Overall</string>
    <string name="ottoman_title">Ottoman</string>
    <string name="Venetian_title">Venetian</string>
    <string name="modern_title">Modern</string>

    <!--   MAP PREFERENCES     -->
    <string name="pref_maps">Map Settings</string>

    <string name="pref_maps_camera_follow_title">Auto Follow Camera</string>
    <string name="pref_maps_camera_follow_summary">Locks camera on user location</string>


    <string name="pref_maps_map_style">Map Style</string>
    <string-array name="pref_maps_map_style_titles">
        <item>Google Default</item>
        <item>Night Mode</item>
        <item>Retro Mode</item>
        <item>Simplified Retro Mode</item>
    </string-array>
    <string-array name="pref_maps_map_style_values">
        <item>Default</item>
        <item>Night Mode</item>
        <item>Retro Mode</item>
        <item>Simple Retro Mode</item>
    </string-array>

    <!-- LOCATION PROVIDER PREFERECES-->
    <string name="pref_location">Location Settings</string>
    <string name="pref_location_mode">Location Mode</string>
    <string-array name="pref_location_mode_titles">
        <item>High Accuracy</item>
        <item>Balanced Power Accuracy</item>
        <item>Battery Saver</item>
    </string-array>
    <string-array name="pref_location_mode_values">
        <item>High Accuracy</item>
        <item>Balanced Power Accuracy</item>
        <item>Battery Saver</item>
    </string-array>
    <!-- LOCATION MODE DIALOG INTEFACE -->
    <string name="pref_location_mode_dialog">Location Mode</string>
    <string-array name="pref_location_mode_titles_dialog">
        <item>High Accuracy</item>
        <item>Balanced Power Accuracy</item>
        <item>Battery Saver</item>
        <item>Background</item>
    </string-array>
    <string-array name="pref_location_mode_values_dialog">
        <item>High Accuracy</item>
        <item>Balanced Power Accuracy</item>
        <item>Battery Saver</item>
        <item>Background</item>
    </string-array>
    <!-- GEO FENCE PREFERENCES -->
    <string name="pref_geo_fence">Location Service</string>
    <string name="pref_geo_fence_culling_distance">Draw Distance</string>
    <string name="pref_geo_fence_culling_distance_summary">Set Max Drawing Distance</string>

    <string name="use_google_api_client">if enabled the app uses the google api client for location updates.Otherwise it uses the android.location api</string>
    <string name="google_api_client">Google Api Client</string>

    <string name="notification_toggle_start">START</string>
    <string name="notification_toggle_pause">PAUSE</string>
    <string name="notification_toggle_stop">STOP</string>
    <string name="notification_toggle_settings">SETTINGS</string>
    <string name="allow_background_locations_title">Allow Background Location Service</string>
    <string name="allow_background_locations">Get Notifications about nearby Landmarks when the app is in the background</string>

    <!-- LOGIN PREFERENCES -->
    <string name="pref_user_settings">User Settings</string>

    <string name="pref_keep_logged_in">Keep me Logged In</string>
    <string name="pref_keep_logged_in_summary">Auto Sign in when App starts</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Fetching Content</string>

    <string name="title_activity_leader_board">leaderBoardActivity</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_landmarks">Most Visited</string>
    <string name="title_local_activity">Local Activity</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>


    <string name="completed">Completed</string>
</resources>
