<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="pref_key_allow_background_locations"
        android:summary="@string/allow_background_locations"
        android:title="@string/allow_background_locations_title"
        android:defaultValue="false"/>

    <ListPreference
        android:key="pref_key_location_update_interval"
        android:title="@string/pref_location_mode"
        android:entries="@array/pref_location_mode_titles"
        android:defaultValue="High Accuracy"
        android:entryValues="@array/pref_location_mode_values"/>

    <SeekBarPreference
        android:key="pref_key_user_draw_radius"
        android:summary="@string/pref_geo_fence_culling_distance_summary"
        android:title="@string/pref_geo_fence_culling_distance"/>


</PreferenceScreen>