<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_location">

        <ListPreference
            android:key="pref_key_location_update_interval_dialog"
            android:title="@string/pref_location_mode"
            android:entries="@array/pref_location_mode_titles_dialog"
            android:defaultValue="Background"
            android:entryValues="@array/pref_location_mode_values_dialog"/>

        <CheckBoxPreference
            android:key="pref_key_google_api_client"
            android:summary="@string/use_google_api_client"
            android:title="@string/google_api_client"
            android:defaultValue="true"/>
    </PreferenceCategory>

</PreferenceScreen>