<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_gravity="bottom|center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
    style="?attr/actionBarStyle">

    <Button
        android:id="@+id/profile_activity"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/profile"
        android:textSize="12sp"
        android:textColor="@color/text_icon"
        android:padding="0dp"
        android:drawableTop="@drawable/ic_person_white"
        style="?attr/toolbarNavigationButtonStyle"
        android:onClick="handleBottomBarSelection"/>

    <Button
        android:id="@+id/pending_activity"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/pending"
        android:textSize="12sp"
        android:textColor="@color/text_icon"
        android:padding="0dp"
        android:drawableTop="@drawable/ic_filter_drama_white"
        style="?attr/toolbarNavigationButtonStyle"
        android:onClick="handleBottomBarSelection"/>
    <Button
        android:id="@+id/dummy"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:textColor="@color/text_icon"
        android:drawableTop="@drawable/ic_settings_white"
        style="?attr/toolbarNavigationButtonStyle"
        android:onClick="handleBottomBarSelection"/>
    <Button
        android:id="@+id/collection_activity"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/collection"
        android:textSize="12sp"
        android:textColor="@color/text_icon"
        android:padding="0dp"
        android:drawableTop="@drawable/ic_collections_white"
        style="?attr/toolbarNavigationButtonStyle"
        android:onClick="handleBottomBarSelection"/>

    <Button
        android:id="@+id/activity_settings"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:text="@string/global_settings"
        android:textSize="12sp"
        android:textColor="@color/text_icon"
        android:padding="0dp"
        android:drawableTop="@drawable/ic_settings_white"
        style="?attr/toolbarNavigationButtonStyle"
        android:onClick="handleBottomBarSelection" />

</LinearLayout>